--- a/next-js-react-chat-template/phidata-ui/package.json
+++ b/next-js-react-chat-template/phidata-ui/package.json
@@ -33,7 +33,8 @@
     "react-markdown": "^9.0.1",
     "react-resizable-panels": "^1.0.9",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/fuzzyset.js": "^0.0.5",
